# min-ex

./: .gitignore  CMakeLists.txt  COPYING  input.py  pyproject.toml
cmake/: AddEigen.cmake
src/: Files.cmake  ScfTask.cpp  ScfTask.h  ScfTask_python.cpp  config.cmake.in  serenity.cpp
src/python/: serenipy.cpp
